<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">SL Train Schedule</string>
    <string name="app_name">Sri Lanka Train Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_when">When</string>
    <string name="lbl_full_schedule">Full Schedule</string>
    <string name="lbl_next_schedule">Next Schedule</string>
    <string name="lbl_time_filter">Time Filter</string>
    <string name="lbl_search_page">Search</string>
    <string name="lbl_ticket_price">Ticket Price</string>
    <string name="lbl_first_class">1st class</string>
    <string name="lbl_second_class">2nd class</string>
    <string name="lbl_third_class">3rd class</string>
    <string name="lbl_app_version">v 1.0.0.0</string>
    <string name="lbl_copyright">copyright</string>
    <string name="lbl_company_name">eightlabs®</string>

    <string name="btn_swap">Swap</string>
    <string name="btn_ticket_prices">Get Prices</string>

    <string name="lnk_feedback">
    <![CDATA[<a href="http://google.com/">technical support/feedback email</a>]]>
    </string>
    <string name="lnk_rate_app">
    <![CDATA[<a href="http://google.com/">rate this app</a>]]>
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="nav_drawer_item_search">Search</string>
    <string name="nav_drawer_item_recent">Recent</string>
    <string name="nav_drawer_item_favorite">Favorite</string>
    <string name="nav_drawer_item_ticket_prices">Ticket prices</string>
    <string name="nav_drawer_item_near_by">Near by</string>
    <string name="nav_drawer_item_main_routes">Main routes</string>
    <string name="nav_drawer_item_stations">Stations</string>
    <string name="nav_drawer_item_railway_network">Railway network</string>
    <string name="nav_drawer_item_about">About</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Search</item>
        <item >Recent</item>
        <item >Favorite</item>
        <item >Ticket Prices</item>
        <item >Near By</item>
        <item >Main Routes</item>
        <item >Stations</item>
        <item >Railway Network</item>
        <item >About</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
