<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/pnlHeaderPanel"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="@color/bg_blue">
        <TextView android:text="@string/nav_drawer_item_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_tab_text_size"
            android:layout_marginLeft="6dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pnlRootPanel"
        android:layout_below="@+id/pnlHeaderPanel"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <TextView android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/layout_sub_header_size"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

            <TextView android:text="@string/lbl_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="10"
            android:layout_marginTop="12dp">
            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/txtAppDescription" />
            </ScrollView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="6"
                android:layout_marginTop="12dp">
                <TextView android:text="technical support/feedback email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lnkFeedback"/>
                <TextView android:text="rate this app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lnkRateApp"
                    android:layout_marginTop="6dp"/>

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:id="@+id/imgEightLabsLogo"
                    android:background="@drawable/img_eightlabs_logo"
                    android:layout_marginTop="12dp"/>

            </LinearLayout>
            <TextView android:text="@string/lbl_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                />
            <TextView android:text="@string/lbl_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>
        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
