<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pnlHeaderPanel"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="@color/bg_blue">
        <TextView android:text="@string/nav_drawer_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbar_tab_text_size"
            android:layout_marginLeft="6dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pnlRootPanel"
        android:layout_below="@+id/pnlHeaderPanel"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">
        <LinearLayout
            android:id="@+id/pnlMainPanel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            >

            <TextView android:text="@string/lbl_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblFrom"
                android:layout_marginTop="12dp"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbFromStation"
                android:layout_below="@+id/lblFrom"
                android:hint="Start station"
                android:maxLines="1"
                android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cmbFromStation"
            android:weightSum="10"
            >
            <TextView android:text="@string/lbl_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblTo"
                android:layout_marginTop="12dp"
                android:layout_weight="9.5"
                android:layout_gravity="center_vertical"
                />
            <ImageButton
                android:background="@drawable/ic_button_swap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="top"
                />
         </LinearLayout>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbFromStations"
                android:layout_below="@+id/lblTo"
                android:hint="End station"
                android:autoText="false"
                android:maxLines="1"
                android:layout_marginTop="5dp"/>

            <TextView android:text="@string/lbl_when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblWhen"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/cmbFromStations" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSearchDate"
                android:layout_below="@+id/lblWhen"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="Select date"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="false"/>

            <RadioGroup
                android:id="@+id/radioScheduleType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txtSearchDate"
                android:layout_marginTop="24dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_full_schedule"
                    android:id="@+id/rbFullSchedule"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_next_schedule"
                    android:layout_weight="1"
                    android:id="@+id/rbNextSchedule"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_time_filter"
                android:id="@+id/cbTimeFilter"
                android:layout_below="@+id/radioScheduleType"
                android:layout_marginTop="24dp"
               />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbTimeFilter"
                android:layout_marginTop="12dp"
                android:weightSum="10">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtStartTime"
                    android:hint="Start time"
                    android:layout_weight="4"
                    android:focusableInTouchMode="false"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="12dp"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center"
                    android:text="to"
                 />
                </LinearLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEndTime"
                    android:hint="End time"
                    android:layout_weight="4"
                    android:focusableInTouchMode="false"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_search_page"
            android:id="@+id/btnSearch"
            android:layout_alignParentBottom="true"
            android:background="@color/button_blue"
            android:clickable="false"
            android:textColor="@color/white" />
    </RelativeLayout>


</RelativeLayout>
